; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/clocks/extr_clocks.c_test_clock_boottime.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/clocks/extr_clocks.c_test_clock_boottime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32 }

@CLOCK_BOOTTIME = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i64 0, align 8
@clock_boottime_valid = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_clock_boottime() #0 {
  %1 = alloca %struct.timespec, align 4
  %2 = load i32, i32* @CLOCK_BOOTTIME, align 4
  %3 = call i32 @clock_gettime(i32 %2, %struct.timespec* %1)
  %4 = icmp eq i32 %3, -1
  br i1 %4, label %5, label %10

5:                                                ; preds = %0
  %6 = load i64, i64* @errno, align 8
  %7 = load i64, i64* @EINVAL, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %5
  store i64 0, i64* @clock_boottime_valid, align 8
  br label %10

10:                                               ; preds = %9, %5, %0
  ret void
}

declare dso_local i32 @clock_gettime(i32, %struct.timespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
